--- a/jobs/templates/employer.html
+++ b/jobs/templates/employer.html
@@ -9,21 +9,21 @@
 <h2>Jobs</h2>
 {{show_jobs(jobs)}}
 <h2>Reviews</h2>
-{% for review in reviews}
+{% for review in reviews %}
   <div class="box">
     <article class="media">
       <div class="media-left">
-        {%for _ in range(0,review['rating']) % }
+        {% for _ in range(0, review['rating'] ) %}
           <span class="fa fa-star checked"></span>
-        {%endfor%}
+        {% endfor %}
       </div>
       <div class="media-content">
         <div class="content">
           <p>
-            <strong>{{review['title']}}</strong>
-            <small>{{ review['status']}}</small>
-            <small>{{ review['date']}}</small>
-            {{review['review']}}
+            <strong>{{ review['title'] }}</strong>
+            <small>{{ review['status'] }}</small>
+            <small>{{ review['date'] }}</small>
+            {{ review['review'] }}
           </p>
         </div>
       </div>
